...
              _buildListasView(provider.listasFinalizadas, isAtivas: false),
            ],
          );
        },
      ),
      floatingActionButton: FloatingActionButton.extended(
        key: const Key('fabNovaLista'),
        onPressed: _criarNovaLista,
        icon: const Icon(Icons.add),
        label: Text(AppLocalizations.of(context)!.newList),
      ),
    );
  }
...
